# Dynamics

./: .clang-format  .gitignore  CMakeLists.txt  geometry-models.cpp  kinematics-derivatives.cpp
OMPL/: tutorial.md
optimization/g2o/: g2o.md
pinicchio/: kinematics-derivatives.cpp  load_model_urdf.cpp  pinicchio.md
pinicchio/test/: main_test.cpp  std_test.cpp
test/: std_test
